--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MvvmTestProject</string>
+    <string name="app_name">Search Images</string>
     <string name="search_view_hint">Search</string>
     <string name="error_message">Something went wrong&#8230;</string>
     <string name="error_action_refresh">Refresh</string>
